--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -5,6 +5,7 @@ on:
       - master
 jobs:
   deploy:
+    runs-on: ubuntu-latest
     steps:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.7.3
